--- a/Style/style.css
+++ b/Style/style.css
@@ -31,6 +31,13 @@ body {
 .columna {
   color: white;
   padding: 2rem;
+  width: 25%;
+  overflow: hidden;
+  transition: width 0.3s ease-in-out;
+  cursor: pointer;
+}
+.columna.activa {
+  width: 50%;
 }
 .columna:first-of-type {
   border-radius: 0.5rem 0 0 0.5rem;
@@ -49,6 +56,7 @@ body {
 }
 .texto {
   font-size: 14px;
+  margin-bottom: 3rem;
 }
 /* enlace */
 .enlace {
